8 January 2013: Wouter
	- Fix make outside of source directory.

7 January 2013: Wouter
	- fixed uninit variable for empty zone axfr request
	- fixed alloc of acl options for config zones so they can be deleted.
	- fixed that pattern name is copied, so that patterns stay the same.
	- repattern also rereads the zones in the config file and applies that
	  to the running server.

21 December 2012: Wouter
	- --with-logfile sets the logfile inside the example documentation.
	- Fixed addzone and delzone inside chroot (thanks Will Pressly).

19 December 2012: Wouter
	- Fixup for libevent-2.1.2.

18 December 2012: Wouter
	- makedist makes sha256 for tarballs.
	- nsd-control start runs an absolute path to start sbin/nsd.

17 December 2012: Wouter
	- Fix for use with libev (no use of event.ev_flags).

12 December 2012: Wouter
	- 4.0.0b1 is beta1 version.

11 December 2012: Matthijs
	- Better ILNP RR parsing (thanks Stephane Bortzmeyer).

11 December 2012: Wouter
	- fix libevent=no signals on Solaris.
	- Fix handle of activated zones from timeout event.
	- contrib/nsd_munin_ updated with memory lookup for BSD.

10 December 2012: Wouter
	- implement --with-libevent=no.

10 December 2012: Matthijs
	- Bug #483: Better error messages for TSIG errors.
	- RFC 2845: If BADKEY or BADSIG, RCODE should be NOTAUTH.
	  Also, continue TSIG verication if NOTAUTH.

7 December 2012: Wouter
	- stable pidfile, xfrd is process leader and forks server-parent.

5 December 2012: Wouter
	- NSD4_imp_6 tag.
	- trunk has imp_7 implementation.

4 December 2012: Wouter
	- NSD-RRL documented in manpage.

3 December 2012: Wouter
	- Fixup exit of server-child while notifies are incoming.

28 November 2012: Wouter
	- RRL implements classification type RRSIG.

26 November 2012: Wouter
	- Fix to make nsd.udb portable between 32bit and 64bit machines.
	- Fix to make udb mmap work for FreeBSD8 when it grows significantly.

23 November 2012: Wouter
	- Fix compiler warnings and fix blocking pipes.