@@ -1,3 +1,15 @@
+8 January 2013: Matthijs
+	- Merge changes from 3.2.15 with trunk:
+		* Update docs: CREDITS, NEW-CFG-OPTION, REQUIREMENTS,
+		  RELNOTES, TODO
+		* Update dname_test.tpkg test.
+		* TSIG init only fails if no digests at all can be found.
+		* Remove unused tsig_get_algorithm_by_id code (was used by
+		  nsd-xfer).
+		* Fix some fd leaks.
+		* Bug #485: Fallback to DEFAULT_TTL if MSB is set.
+		* Fix RCODE when xNAME loop final answer not exist to NXDOMAIN.	
+
 8 January 2013: Wouter
 	- Fix make outside of source directory.
 
